Mon Feb 28 15:27:42 GMT 2005  Olly Betts <olly@survex.com>

	* api/omquery.cc,api/omqueryinternal.cc,include/xapian/query.h,
	  matcher/localmatch.cc,tests/api_anydb.cc,tests/api_nodb.cc:
	  Eliminated Query::set_elite_set_size().

Mon Feb 28 15:15:45 GMT 2005  Olly Betts <olly@survex.com>

	* HACKING: Note how to disable use of VALGRIND on the make check
	  command line, or when using runtest directly.

Mon Feb 28 13:36:07 GMT 2005  Olly Betts <olly@survex.com>

	* common/omqueryinternal.h: Removed out-of-date commented out version
	  of Xapian::Query::Internal.

Mon Feb 28 13:07:42 GMT 2005  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_alltermslist.cc,tests/api_db.cc: Updated (C)
	  dates for changes earlier this year.

Mon Feb 28 13:04:41 GMT 2005  Olly Betts <olly@survex.com>

	* api/omquery.cc,api/omqueryinternal.cc,include/xapian/query.h,
	  matcher/localmatch.cc,matcher/localmatch.h,tests/api_anydb.cc,
	  tests/api_nodb.cc,tests/api_posdb.cc: Eliminated Query::set_window
	  in favour of an optional parameter to the constructor, with the aim
	  of making Query objects immutable once constructed.

Mon Feb 28 12:32:26 GMT 2005  Olly Betts <olly@survex.com>

	* extra/queryparser.lemony: Updated 2 uses of Query::set_window().

Mon Feb 28 04:43:20 GMT 2005  Olly Betts <olly@survex.com>

	* api/omquery.cc,api/omqueryinternal.cc,common/socketcommon.h,
	  include/xapian/query.h,matcher/,tests/api_anydb.cc:
	  Removed OP_WEIGHT_CUTOFF, since it doesn't actually seem to
	  add useful functionality over using Enquire::set_cutoff().

Mon Feb 28 04:31:58 GMT 2005  Olly Betts <olly@survex.com>

	* matcher/weightcutoffpostlist.cc: Fix updating of docid in
	  WeightCutoffPostList - the current code works, but can end up doing
	  lots (potentially millions) of pointless loop iterations.

Mon Feb 28 02:57:29 GMT 2005  Olly Betts <olly@survex.com>

	* docs/queryparser.html: Note that + and - work on phrases and
	  bracketed expressions.
